--- a/src/app/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon-list/pokemon-list.component.html
@@ -7,7 +7,9 @@
       floatLabel="always"  
       appearance="fill">
         <input matInput placeholder="Find your pokemon...">
-        <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+        <button matSuffix mat-icon-button aria-label="Example icon button with a vertical three dot icon">
+          <mat-icon>catching_pokemon</mat-icon>
+        </button>
       </mat-form-field>
     </div>
   </div>
