Main - Adding comment explain a style change in mat-form-field`s class

--- a/src/app/pokemon-list/pokemon-list.component.scss
+++ b/src/app/pokemon-list/pokemon-list.component.scss
@@ -14,6 +14,7 @@
     .filter-input-container {
       width: 85%;
 
+      //Change styles of class roots from mat-form-field and mat-input
       ::ng-deep {
         .mat-form-field-appearance-fill .mat-form-field-underline {
           display: none !important;
