Main - WIP: Trabalhando na estruturação da lista de pokemons

--- a/src/app/pokemon-list/pokemon-list.component.scss
+++ b/src/app/pokemon-list/pokemon-list.component.scss
@@ -42,9 +42,11 @@
       }
     }
 
-
-
-    
+    .grid-list-items {
+      background-color: #FF5350;
+      width: 85%;
+      height: 100%;
+    }
 
   }
 
