Main - WIP: Working on grid list area

--- a/src/app/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon-list/pokemon-list.component.html
@@ -1,6 +1,7 @@
 <div class="container">
-  <app-side-menu></app-side-menu>
+  <app-side-menu class="side-menu"></app-side-menu>
   <div class="list-container">
+    <img class="pokebola-image-background" src="assets/images/pokebola-cinza.png" alt="">
     <div class="filter-input-container">
       <mat-form-field
       class="filter-input"
@@ -13,7 +14,104 @@
       </mat-form-field>
     </div>
     <div class="grid-list-items">
-      
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
+      <app-list-card>
+      </app-list-card>
     </div>
   </div>
 </div>
