--- a/src/app/pokemon-list/pokemon-list.component.scss
+++ b/src/app/pokemon-list/pokemon-list.component.scss
@@ -2,14 +2,36 @@
   display: flex;
   flex-direction: row;
   background-color: #F6F8FC;
+  overflow-x: hidden;
+  justify-content: flex-end;
+
+  .side-menu {
+    top: 0;
+    left: 0;
+    position: fixed;
+    
+  }
 
   .list-container {
     display: flex;
-    width: 100%;
+    width: calc(100% - 150px);
     flex-direction: column;
     align-items: center;
     min-width: 150px;
     padding-top: 41px;
+
+
+
+
+    .pokebola-image-background {
+      width: 800px;
+      height: 800px;
+      position: absolute;
+      top: -200px;
+      right: -400px;
+      z-index: 0;
+      transform: rotate(50deg);
+    }
 
     .filter-input-container {
       width: 85%;
@@ -43,9 +65,13 @@
     }
 
     .grid-list-items {
-      background-color: #FF5350;
+      display: flex;
+      gap: 30px;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
       width: 85%;
-      height: 100%;
+      height: 100%
     }
 
   }
