Main - Make the button of side-menu of types change style when were clicked

--- a/src/app/pokemon-list/components/side-menu/components/side-menu-item/side-menu-item.component.html
+++ b/src/app/pokemon-list/components/side-menu/components/side-menu-item/side-menu-item.component.html
@@ -1,7 +1,9 @@
 <button 
+  #button
   mat-flat-button
-  [ngStyle]="{'color': typeColor}"
-  class="side-menu-item"
-  (click)="onClick($event)">
+  [id]="idButton"
+  [ngStyle]="{'color': typeColor, 'backgroundColor': typeBackgroundColor}"
+  (click)="onClick(button)"
+  class="side-menu-item">
   {{typeName}}
 </button>
