--- a/src/app/pokemon-list/pokemon-list.component.scss
+++ b/src/app/pokemon-list/pokemon-list.component.scss
@@ -19,19 +19,8 @@
     align-items: center;
     min-width: 150px;
     padding-top: 41px;
-
-
-
-
-    .pokebola-image-background {
-      width: 800px;
-      height: 800px;
-      position: absolute;
-      top: -200px;
-      right: -400px;
-      z-index: 0;
-      transform: rotate(50deg);
-    }
+    height: 100vh;
+    box-sizing: border-box;
 
     .filter-input-container {
       width: 85%;
@@ -71,9 +60,12 @@
       flex-wrap: wrap;
       justify-content: center;
       width: 85%;
-      height: 100%
     }
 
+  }
+
+  .list-container::-webkit-scrollbar {
+    display: none;
   }
 
 }
