Main - WIP: Building the list-card template

--- a/src/app/pokemon-list/components/list-card/list-card.component.html
+++ b/src/app/pokemon-list/components/list-card/list-card.component.html
@@ -1,3 +1,14 @@
 <mat-card class="card-body">
+  <span>{{ name }}</span>
 
+  <div class="images-container">
+    <img 
+    class="pokeball-image"
+    [src]="'assets/images/pokeball-background-1.png'"
+    [alt]="'Pokebola preta para cada atras de cada card da lista de pokemons'">
+
+    <img
+    class="pookemon-image"
+    [src]="image" alt="">
+  </div>
 </mat-card>
