--- a/src/app/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon-list/pokemon-list.component.html
@@ -13,103 +13,12 @@
       </mat-form-field>
     </div>
     <div class="grid-list-items">
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
-      </app-list-card>
-      <app-list-card>
+      <app-list-card
+      *ngFor="let pokemon of pokemonList"
+      [name]="pokemon.name"
+      [image]="pokemon.image"
+      >
+
       </app-list-card>
     </div>
   </div>
