--- a/src/app/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon-list/pokemon-list.component.html
@@ -15,8 +15,7 @@
     <div class="grid-list-items">
       <app-list-card
       *ngFor="let pokemon of pokemonList"
-      [name]="pokemon.name"
-      [image]="pokemon.image"
+      [pokemon]="pokemon"
       >
 
       </app-list-card>
