--- a/src/app/pokemon-list/components/list-card/list-card.component.scss
+++ b/src/app/pokemon-list/components/list-card/list-card.component.scss
@@ -6,9 +6,25 @@
   border-radius: 22px;
   background-color: #efef43;
 
-  .images-container {
-
+  .info-container {
     
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    
+    
+
+    .pokemon-name {
+      font-size: 16px;
+      text-transform: capitalize;
+      font-weight: bold;
+      color: #433434;
+    }
+  }
+
+  .images-container {
+    position: relative;
+
     .pokeball-image {
       width: 90px;
       height: 90px;
@@ -16,8 +32,8 @@
   
     .pokemon-image {
       position: absolute;
-      z-index: 1;
-
+      top: 0;
+      left: 0;
       
     }
   }
