--- a/src/app/pokemon-list/pokemon-list.component.scss
+++ b/src/app/pokemon-list/pokemon-list.component.scss
@@ -40,6 +40,7 @@
         }
         
      }
+
       .filter-input {
         width: 100%;
 
@@ -52,6 +53,10 @@
         }
       }
     }
+
+    .progess-spinner {
+      margin: auto;
+   }
 
     .grid-list-items {
       display: flex;
