--- a/src/app/pokemon-list/pokemon-list.component.scss
+++ b/src/app/pokemon-list/pokemon-list.component.scss
@@ -3,6 +3,7 @@
   flex-direction: row;
   background-color: #F6F8FC;
   overflow-x: hidden;
+  overflow-y: scroll;
   justify-content: flex-end;
 
   .side-menu {
