--- a/src/app/pokemon-list/components/list-card/list-card.component.html
+++ b/src/app/pokemon-list/components/list-card/list-card.component.html
@@ -1,35 +1,4 @@
-<mat-card *ngIf="hasValue(pokemon)" class="card-body" [style]="{'background-color': propertyValue(this.pokemon.types, this.pokemon.types[0].color, '#cecece') }">
-
-  <div class="info-container">
-    <span class="pokemon-name">{{ pokemon!.name }}</span>
-    <div>
-      <mat-chip-list class="mat-chip-list-stacked" aria-label="Color selection">
-        <mat-chip 
-          *ngFor="let type of pokemon?.types"
-          class="pokemon-type-label" 
-          [selectable]="false"
-          [ngStyle]="{'color': type.color ? type.color : '#cecece'}"
-        >
-          {{type.name.toUpperCase()}}
-        </mat-chip>
-      </mat-chip-list>
-    </div>
-
-  </div>
-
-  <div class="images-container">
-    <img 
-    class="pokeball-image"
-    [src]="'assets/images/pokeball-background-1.png'"
-    [alt]="'Pokebola preta para cada atras de cada card da lista de pokemons'">
-
-    <img
-    class="pokemon-image"
-    [src]="pokemon!.image" alt="">
-  </div>
-</mat-card>
-
-<mat-card *ngIf="!hasValue(pokemon)" class="card-body" [style]="{'background-color': propertyValue(this.pokemon.types, this.pokemon.types[0].color, '#cecece') }">
+<mat-card *ngIf="hasValue(pokemon)" (click)="selectPokemon()" class="card-body" [style]="{'background-color': propertyValue(this.pokemon.types, this.pokemon.types[0].color, '#cecece') }">
 
   <div class="info-container">
     <span class="pokemon-name">{{ pokemon!.name }}</span>
